--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         
     stage('Git') {
       steps {
-        git 'git 'https://github.com/GokulNathInfotech/testing.git''
+       git 'https://github.com/GokulNathInfotech/testing.git'
       }
     }
      
