--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "stop":"react-scripts stop"
+    "stop": "taskkill -F -IM node.exe"
   },
   "eslintConfig": {
     "extends": [
